push to Maven Central
This PR sets up a release pipeline where individual SBT projects can be
pushed to Maven Central by crafting a special commit with a `deploy:
true` trailer. The process will deploy all of the listed projects in
`release.txt` along with their versions.

It is the release manager's responsibility to make sure `release.txt`
only contains new, unreleased project/version entries. The format of a
line in the `release.txt` file is `<project name> <version>`.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,10 +19,8 @@ jobs:
       - checkout
       - run:
           name: build
-          command: |
-            set -euo pipefail
+          command: ./build.sh
 
-            sbt test
   release:
     docker:
     - image: cimg/openjdk:11.0.13
@@ -34,8 +32,18 @@ jobs:
           name: release
           command: |
             set -euo pipefail
+            export PGP_PASSPHRASE=""
+            export PGP_SECRET="$gpg_code_signing"
+            export SONATYPE_PASSWORD="$MAVEN_PASSWORD"
+            export SONATYPE_USERNAME="$MAVEN_USERNAME"
+            export CI_COMMIT_TAG=1
 
-            echo "TODO: release"
+            deploy=$(git log -n1 --format="%(trailers:key=deploy,valueonly)" $COMMIT)
+            if [ "$deploy" = "true" ]; then
+              while IFS='' read -r p || [ -n "$p" ]; do
+                ./release.sh $p
+              done < release.txt
+            fi
 
 workflows:
   version: 2
@@ -45,6 +53,9 @@ workflows:
     - release:
         requires:
         - build
+        context:
+        # Despite the name, that's where the Sonatype credentials are.
+        - npn-publish
         filters:
           branches:
             only: main
