--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,29 +22,9 @@ jobs:
           command: |
             set -euo pipefail
 
-            sbt test
-  release:
-    docker:
-    - image: cimg/openjdk:11.0.13
-    environment:
-      <<: *env
-    steps:
-      - checkout
-      - run:
-          name: release
-          command: |
-            set -euo pipefail
-
-            echo "TODO: release"
-
+            echo "Archived."
 workflows:
   version: 2
   build:
     jobs:
     - build
-    - release:
-        requires:
-        - build
-        filters:
-          branches:
-            only: main
